<resources>
    <string name="app_name">Plant</string>

    #
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_identity_will_be_hidden">Your identity will be hidden!</string>
    <string name="details">
        Basically my full name is Towhidul Islam Sayon as my certificate. But for the sake of simplicity I use Towhid Soyon
        on all of my social sites. I am an Android Developer. For the last two years I am working on this sector. I have some proficiency in JAVA
         and that is why I choose this as my career.

        Right now I am fulfilling my B.Sc CSE Degree from Daffodil International University. And completed my HSC from Govt. Science College.
        Basically The main motivation is to build this app is actually to provide people the right solution for tree plantation. Planting trees
        without knowing its benefits will result in nothing. As a result to find a solution of this problem I made this app.

        Beside these, to make this app my Final year Defence supervisor Respected JA Polin Maam (Lecturer at DIU) played a vital role. She always
        guided me towards the best way to achieve success. I will be ever grateful to her.

        This project is also a part of my final Year Defence, So yeah that is all about me.

    </string>
    <string name="enter_title">Enter Title</string>
    <string name="description">Description</string>
    <string name="click_here_to_add_image">Click Here To Add Image</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="_2_march_2022_7_30_pm">2 March, 2022; 7.30 pm</string>
    <string name="author">Author</string>
    <string name="name_here">Name here</string>
    <string name="published_on">Published on:</string>
    <string name="dummy_text">This is a dummy text for testing whether this value is applicable for my design what i am expecting or not.</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="all_rights_reserved_by_plant">All rights reserved by plant</string>
    <string name="types_of_soil">Types of Soil</string>
    <string name="please_fillup_all_the_boxes_below_with_correct_information">Please fillup all the boxes below with correct information</string>
    <string name="enter_types_of_soil">Enter Types of Soil</string>
    <string name="temperature">Temperature</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="place">Place</string>
    <string name="ex_upazilla_p_s_district">Ex: Upazilla/P.S. , District</string>
    <string name="water_supply">Water Supply</string>
    <string name="amount_of_water_supply">Amount of Water Supply</string>
    <string name="sunlight">Sunlight</string>
    <string name="amount_of_sunlight">Amount of Sunlight</string>
    <string name="optional">Optional</string>
    <string name="types_of_plant">Types of Plant</string>
    <string name="enter_types_of_plant">Enter Types of Plant</string>
    <string name="submit">Submit</string>
    <string name="fruit_tree">Fruit Tree</string>
    <string name="result_dummy_text">Results hnkfdjvnbksdbvkbdskbvkcfbxkvbkxcnbvcxkvbkcxbnvknbcxknbvkcxnbkvn</string>
    <string name="flower_tree">Flower Tree</string>
    <string name="result_dummy_text_flower">Results hnkfdjvnbksdbvkbdskbvkcfbxkvbkxcnbvcxkvbkcxbnvknbcxknbvkcxnbkvn</string>
    <string name="medicine_tree">Medicine Tree</string>
    <string name="result_dummy_text_medicine">Results hnkfdjvnbksdbvkbdskbvkcfbxkvbkxcnbvcxkvbkcxbnvknbcxknbvkcxnbkvn</string>
    <string name="economical_tree">Economical Tree</string>
    <string name="please_choose">Please Choose</string>
    <string name="stay_anonymous">Stay Anonymous</string>
    <string name="use_identity">Use Identity</string>
    <string name="location">Location</string>
    <string name="user_name">User Name</string>
    <string name="phone_here">Phone here</string>
    <string name="email_here">Email here</string>
    <string name="full_name">Full Name</string>
    <string name="towhid_soyon">Towhid Soyon</string>
    <string name="email">Email</string>
    <string name="towhid12728_gmail_com">towhid12728@gmail.com</string>
    <string name="phone_no">Phone No.</string>
    <string name="_01766755346">01766755346</string>
    <string name="address">Address</string>
    <string name="dhaka_bangladesh">Dhaka, Bangladesh</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="_01521733203">01521733203</string>
    <string name="add_image">Add Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="medicine_plant">Medicine Plant</string>
    <string name="suitable_plants_for_ac_room">Suitable Plants for AC Room</string>
    <string name="fruit_plant">Fruit Plant</string>
    <string name="flower_plant">Flower Plant</string>
    <string name="button2plant">button2Plant</string>
    <string name="button3plant">button3Plant</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="suggested_tree_details">suggested tree details</string>
    <string name="blog_title">Blog Title</string>
    <string name="author_developers">Author: Developers</string>
    <string name="blog_description">Blog Description</string>
    <string name="fruits">FRUITS</string>
    <string name="medicine">MEDICINE</string>
    <string name="flowers">FLOWERS</string>
    <string name="economical">ECONOMICAL</string>
    <string name="all">All</string>
    <string name="bele_soil">BELE SOIL</string>
    <string name="do_ash_soil">DO-ASH SOIL</string>
    <string name="etel_soil">ETEL SOIL</string>
    <string name="bele_do_ash_soil">BELE-DO-ASH SOIL</string>
    <string name="select_sunlight_level">Select sunlight level</string>
    <string name="low">LOW</string>
    <string name="average">AVERAGE</string>
    <string name="good">GOOD</string>
    <string name="select_water_supply_level">Select water supply level</string>
    <string name="fabliha_ji">Fabliha Ji</string>
    <string name="n_a">N/A</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="android_developer">Android Developer</string>
    <string name="details_about">Details</string>
    <string name="details_about_text">Dummy Text</string>
    <string name="contact_info">Contact Info</string>
    <string name="for_more_query">For More Query</string>
    <string name="search">Search</string>
    <string name="_0_celcius">0 celcius</string>
    <string name="haze">Haze</string>
    <string name="fetching">fetching..</string>
    <string name="choose_tree">Choose Tree</string>
    <string name="suggest_tree">Suggest Tree</string>
    <string name="complain_deforestation">Complain Deforestation</string>
    <string name="headerName">Rafidul Islam</string>
    <string name="headerAddress">Address here</string>
    <string name="suggested_tree">Suggested tree</string>
    <string name="brinjalplant">Benefits of Brinjal Plant</string>


    /*108*/
</resources>
