<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/plantDialogContainer"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/types_of_plant"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/colorTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center"
        android:background="@color/colorAsh">

    </View>

    <LinearLayout
        android:id="@+id/fruitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:text="@string/fruits"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center"
        android:background="@color/colorAsh">

    </View>

    <LinearLayout
        android:id="@+id/flowerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:text="@string/flowers"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center"
        android:background="@color/colorAsh">

    </View>

    <LinearLayout
        android:id="@+id/medicineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:text="@string/medicine"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center"
        android:background="@color/colorAsh">

    </View>

    <LinearLayout
        android:id="@+id/economicalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:text="@string/economical"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center"
        android:background="@color/colorAsh">

    </View>

    <LinearLayout
        android:id="@+id/allLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:text="@string/all"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center"
        android:background="@color/colorAsh">

    </View>


</LinearLayout>