<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".codebase.activity.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_500sdp"
            android:layout_marginTop="@dimen/_154sdp"
            android:background="@drawable/frame_layout_bg_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </FrameLayout>

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="-5dp"
            android:background="@drawable/logo_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/back"
            android:backgroundTint="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_137sdp"
            android:layout_marginTop="@dimen/_85sdp"
            android:background="@drawable/imageview_bg_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/profileImage">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullName"
                android:layout_width="@dimen/_265sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/edit_text_bg_3"
                    android:drawableStart="@drawable/profile_logo"
                    android:drawablePadding="@dimen/_13sdp"
                    android:focusable="false"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/towhid_soyon">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="@dimen/_265sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/edit_text_bg_3"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusable="false"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/towhid12728_gmail_com">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumber"
                android:layout_width="@dimen/_265sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/phone_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/edit_text_bg_3"
                    android:drawableStart="@drawable/call_black"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusable="false"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/_01521733203">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address"
                android:layout_width="@dimen/_265sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/edit_text_bg_3"
                    android:drawableStart="@drawable/location_logo"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusable="false"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/dhaka_bangladesh">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
