<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".codebase.activity.AddBlogActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/logo_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageView>

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back"
        android:backgroundTint="@color/Black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/blogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/title"
        android:textColor="@color/Black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBlogImage">

    </TextView>

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="@dimen/_284sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blogTitle">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:alpha="1"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/edit">

        </ImageView>

        <View
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@color/colorAsh">

        </View>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/enter_title"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/Black"
            android:textColorHint="@color/colorTextHint"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="@dimen/_14ssp">

        </EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/dateText"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_22sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/_2_march_2022_7_30_pm"
        android:textColor="@color/colorTextHint"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@id/titleLayout"
        app:layout_constraintTop_toBottomOf="@id/titleLayout">

    </TextView>

    <TextView
        android:id="@+id/blogDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/description"
        android:textColor="@color/Black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateText">

    </TextView>

    <EditText
        android:id="@+id/description"
        android:layout_width="@dimen/_284sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_bg"
        android:gravity="start"
        android:inputType="textCapSentences|textMultiLine"
        android:isScrollContainer="true"
        android:maxLength="2000"
        android:maxLines="4"
        android:padding="5dp"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textCursorDrawable="@drawable/text_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blogDesc"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="358dp" />

    <!--<ImageButton
        android:id="@+id/imageButtonId"
        android:layout_width="@dimen/_282sdp"
        android:layout_height="250dp"
        android:layout_marginTop="452dp"
        android:adjustViewBounds="true"
        android:background="@drawable/edit_text_bg"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <FrameLayout
        android:id="@+id/layoutBlogImage"
        android:layout_width="@dimen/_284sdp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage">

        <ImageView
            android:id="@+id/blogImage"
            android:layout_width="@dimen/_282sdp"
            android:layout_height="@dimen/_135sdp"
            android:background="@drawable/edit_text_bg"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            tools:ignore="ContentDescription">

        </ImageView>

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/click_here_to_add_image"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/_18ssp">

        </TextView>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/postButton"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:background="@drawable/button_bg_2"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/post"
        android:textSize="@dimen/_21sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>